# desafio-bhub

./: .env-example  README.md  mkdocs.yml  postman_collection.json  pyproject.toml  sonar-project.properties
.github/workflows/: pipeline.yml
docs/: actions.md  index.md  rules.md  validators.md
src/: actions.py  app.py  controller.py  logger.py  rules.py  server.py  validators.py
tests/: test_actions.py  test_app.py  test_logger.py  test_validators.py
