[tool.poetry]
name = "bhub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
taskipy = "^1.12.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
