[tool.poetry]
name = "bhub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
taskipy = "^1.12.0"
isort = "^5.12.0"
pytest-mock = "^3.11.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
dev = "ENVIRONMENT=dev python src/server.py"
docs = "mkdocs serve"
lint = "blue --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv ."
post_test = "coverage html"
